@@ -1,3 +1,6 @@
+20140618
+ - (tim) [openssh/session.c] Work around to get chroot sftp working on UnixWare
+
 20140617
  - (dtucker) [entropy.c openbsd-compat/openssl-compat.{c,h}
    openbsd-compat/regress/{.cvsignore,Makefile.in,opensslvertest.c}]
